# django-rest-starter

./: README.md  pyproject.toml
app/: settings.py  urls.py  views.py
src/: manage.py
src/api/: settings.py
src/django_rest_starter/: hello.py  tasks.py
src/main/: settings.py
