[project]
name = "django-rest-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhordy Gavinchu",email = "dev@jhordyess.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

[tool.poe.tasks]
dev = "python ./manage.py runserver"
manage = "python ./manage.py"
format = "autopep8 --in-place --aggressive --aggressive --recursive api"

[tool.autopep8]
max_line_length = 100
indent-size = 2
aggressive = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
